// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MenuItem component renders menu item with no image 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <a
    className="menu__menuitem menu__menuitem--primary"
    onClick={[Function]}
    role="menuitem"
    tabIndex={0}
>
    <Icon
        className=""
        color=""
        name=""
        size=""
        style={Object {}}
    />
    title
</a>,
  "nodes": Array [
    <a
      className="menu__menuitem menu__menuitem--primary"
      onClick={[Function]}
      role="menuitem"
      tabIndex={0}
>
      <Icon
            className=""
            color=""
            name=""
            size=""
            style={Object {}}
      />
      title
</a>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 2,
      "_context": Object {},
      "_currentElement": <MenuItem
        interfaceType=""
        isActive={false}
        menuType="primary"
        onClick={[Function]}
        title="title"
        to="linkyLink"
/>,
      "_debugID": 3,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": StatelessComponent {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "props": Object {
          "interfaceType": "",
          "isActive": false,
          "menuType": "primary",
          "onClick": [Function],
          "title": "title",
          "to": "linkyLink",
        },
        "refs": Object {},
        "state": null,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 2,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <a
          className="menu__menuitem menu__menuitem--primary"
          onClick={[Function]}
          role="menuitem"
          tabIndex={0}
>
          <Icon
                    className=""
                    color=""
                    name=""
                    size=""
                    style={Object {}}
          />
          title
</a>,
        "_debugID": 4,
        "_renderedOutput": <a
          className="menu__menuitem menu__menuitem--primary"
          onClick={[Function]}
          role="menuitem"
          tabIndex={0}
>
          <Icon
                    className=""
                    color=""
                    name=""
                    size=""
                    style={Object {}}
          />
          title
</a>,
      },
      "_renderedNodeType": 0,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <MenuItem
    interfaceType=""
    isActive={false}
    menuType="primary"
    onClick={[Function]}
    title="title"
    to="linkyLink"
/>,
}
`;

exports[`MenuItem component renders menu item with title 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <a
    className="menu__menuitem menu__menuitem--primary"
    onClick={[Function]}
    role="menuitem"
    tabIndex={0}
>
    <Icon
        className=""
        color=""
        name=""
        size=""
        style={Object {}}
    />
    title
</a>,
  "nodes": Array [
    <a
      className="menu__menuitem menu__menuitem--primary"
      onClick={[Function]}
      role="menuitem"
      tabIndex={0}
>
      <Icon
            className=""
            color=""
            name=""
            size=""
            style={Object {}}
      />
      title
</a>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 2,
      "_context": Object {},
      "_currentElement": <MenuItem
        imageType="type"
        interfaceType=""
        isActive={false}
        menuType="primary"
        onClick={[Function]}
        title="title"
        to="linkyLink"
/>,
      "_debugID": 1,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": StatelessComponent {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "props": Object {
          "imageType": "type",
          "interfaceType": "",
          "isActive": false,
          "menuType": "primary",
          "onClick": [Function],
          "title": "title",
          "to": "linkyLink",
        },
        "refs": Object {},
        "state": null,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 1,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <a
          className="menu__menuitem menu__menuitem--primary"
          onClick={[Function]}
          role="menuitem"
          tabIndex={0}
>
          <Icon
                    className=""
                    color=""
                    name=""
                    size=""
                    style={Object {}}
          />
          title
</a>,
        "_debugID": 2,
        "_renderedOutput": <a
          className="menu__menuitem menu__menuitem--primary"
          onClick={[Function]}
          role="menuitem"
          tabIndex={0}
>
          <Icon
                    className=""
                    color=""
                    name=""
                    size=""
                    style={Object {}}
          />
          title
</a>,
      },
      "_renderedNodeType": 0,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <MenuItem
    imageType="type"
    interfaceType=""
    isActive={false}
    menuType="primary"
    onClick={[Function]}
    title="title"
    to="linkyLink"
/>,
}
`;
